# libzkdeid

./: CMakeLists.txt  README.md  base.cpp  base.hpp  bb.hpp  cls.cpp  cls.hpp  crypto.hpp  deid.cpp  deid.hpp  protocol.hpp  schnorr.hpp  table.hpp
bench/: CMakeLists.txt  cls.cpp  deid.cpp
cmake/: gtest.cmake  mcl.cmake
test/: CMakeLists.txt  bb.cpp  crypto.cpp  deid.cpp  init_test.cpp  web.cpp
